solving undefined error and creating loader module

--- a/src/app/employees/employee-details/employee-details.component.html
+++ b/src/app/employees/employee-details/employee-details.component.html
@@ -1,2 +1,5 @@
-<p>employee-details works!</p>
-{{ data | json }}
+<app-loader *ngIf="loaded"></app-loader>
+
+<mat-card *ngIf = "!loaded">
+    <mat-card-content>{{Emp.firstname}}</mat-card-content>
+</mat-card>
