--- a/src/app/employees/employee-details/employee-details.component.css
+++ b/src/app/employees/employee-details/employee-details.component.css
@@ -2,3 +2,18 @@ mat-card{
     width: 40vw;
     margin: auto;
 }
+
+.details{
+    height: 497px;
+}
+
+.info{
+    display: inline-block;
+    width: 60%;
+}
+.title{
+    display: inline-block;
+    font-weight: bolder;
+    width: 30%;
+    margin-left: 10%;
+}
