--- a/src/app/employees/employees-list/employees-list.component.html
+++ b/src/app/employees/employees-list/employees-list.component.html
@@ -1,30 +1,44 @@
 
-<table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+<app-loader *ngIf="loader.isLoading | async"></app-loader> 
 
+<div class="form-group">
+  <input (keyup)="applySearch($event.target.value)" class="form-control" aria-describedby="emailHelp" placeholder="Search">
+</div>
+
+<div class="records mx-5">
+  <table *ngIf="!(loader.isLoading |async)" mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8">
+
+      <ng-container matColumnDef="id">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>  Sl No. </th>
+        <td mat-cell *matCellDef="let element; let i = index;"> {{i+1}} </td>
+      </ng-container>
     
-    <ng-container matColumnDef="id">
-      <th mat-header-cell *matHeaderCellDef> Sl No. </th>
-      <td mat-cell *matCellDef="let element; let i = index;"> {{i+1}} </td>
-    </ng-container>
-  
+      
+      <ng-container matColumnDef="name">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> Name </th>
+        <td mat-cell *matCellDef="let element"> {{element.firstname}} </td>
+      </ng-container>
     
-    <ng-container matColumnDef="name">
-      <th mat-header-cell *matHeaderCellDef> Name </th>
-      <td mat-cell *matCellDef="let element"> {{element.firstname +" " + element.lastname}} </td>
-    </ng-container>
-  
+      
+      <ng-container matColumnDef="company">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> Comapny </th>
+        <td mat-cell *matCellDef="let element"> {{element.company}} </td>
+      </ng-container>
     
-    <ng-container matColumnDef="company">
-      <th mat-header-cell *matHeaderCellDef> Comapny </th>
-      <td mat-cell *matCellDef="let element"> {{element.company}} </td>
-    </ng-container>
-  
+      
+      <ng-container matColumnDef="jobtitle">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> Job Title </th>
+        <td mat-cell *matCellDef="let element"> {{element.job}} </td>
+      </ng-container>
+      <ng-container matColumnDef="position">
+        <th mat-header-cell *matHeaderCellDef mat-sort-header> Job Title </th>
+        <td mat-cell *matCellDef="let element"> {{element.position}} </td>
+      </ng-container>
     
-    <ng-container matColumnDef="jobtitle">
-      <th mat-header-cell *matHeaderCellDef> Job Title </th>
-      <td mat-cell *matCellDef="let element"> {{element.job}} </td>
-    </ng-container>
-  
-    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedColumns;" (click) ="getId(row)"></tr>
+      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns;" (click) ="getId(row)"></tr>
   </table>
+
+  <mat-paginator [pageSize]="8"> </mat-paginator>
+
+</div>
