--- a/src/app/employees/employees-list/employees-list.component.html
+++ b/src/app/employees/employees-list/employees-list.component.html
@@ -35,10 +35,21 @@
         <th mat-header-cell *matHeaderCellDef mat-sort-header> Job Title </th>
         <td mat-cell *matCellDef="let element"> {{element.job}} </td>
       </ng-container>
-    
+
+      <ng-container matColumnDef="delete">
+        <th mat-header-cell *matHeaderCellDef></th>
+        <td mat-cell *matCellDef="let element"> 
+            <button mat-button (click) ="deleteEmp(element)"><mat-icon color="warn">delete</mat-icon></button>
+            <button mat-button (click) ="getId(element)"><mat-icon color="primary">navigate_next</mat-icon></button>
+        </td>
+      </ng-container>
+
+      <tr class="mat-row" *matNoDataRow>
+        <td class="mat-cell">No data matching the filter</td>
+      </tr>
+
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-      <tr mat-row *matRowDef="let row; columns: displayedColumns;" (click) ="getId(row)"></tr>
-      
+      <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>      
   </table>
 
   <mat-paginator [pageSize]="8"> </mat-paginator>
