--- a/src/app/employees/employees-list/employees-list.component.html
+++ b/src/app/employees/employees-list/employees-list.component.html
@@ -39,8 +39,8 @@
       <ng-container matColumnDef="delete">
         <th mat-header-cell *matHeaderCellDef></th>
         <td mat-cell *matCellDef="let element"> 
-            <button mat-button (click) ="deleteEmp(element)"><mat-icon color="warn">delete</mat-icon></button>
-            <button mat-button (click) ="getId(element)"><mat-icon color="primary">navigate_next</mat-icon></button>
+            <button mat-raised-button (click) ="deleteEmp(element)"><mat-icon color="warn">delete</mat-icon></button>
+            <button mat-raised-button (click) ="getId(element)"><mat-icon color="primary">navigate_next</mat-icon></button>
         </td>
       </ng-container>
 
