--- a/src/app/employees/employees-list/employees-list.component.html
+++ b/src/app/employees/employees-list/employees-list.component.html
@@ -2,7 +2,7 @@
 <app-loader *ngIf="loader.isLoading | async"></app-loader> 
 
 <div class="form-group">
-  <input (keyup)="onKeyUp($event.target.value)" class="form-control" aria-describedby="emailHelp" placeholder="Search">
+  <input (keyup)="onKeyUp($event.target.value)" class="form-control" aria-describedby="emailHelp" placeholder="Search name">
 </div>
 
 <div class="records mx-5">
